# Koinkat

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development.md  restructure-audit.md
docs/images/: README.md
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.demo.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  secrets.rs
src/components/: BankSetupGuide.tsx  ErrorBoundary.tsx
src/data/: mcc-mappings.ts
src/db/: database.ts  migration-v10.sql  migration-v11.sql  migration-v2.sql  migration-v3.sql  migration-v4.sql  migration-v5.sql  migration-v6.sql  migration-v7.sql  migration-v8.sql  migration-v9.sql  schema-v2.sql  schema.sql  seed.ts
src/domain/: colors.ts  currencies.ts  import-description.test.ts  import-description.ts  merchant.ts  money.test.ts  money.ts  pending-reconcile.test.ts  pending-reconcile.ts  recurring-match.test.ts  recurring-match.ts  tx-sql.ts
src/hooks/: useClipboard.ts
src/lib/: active-koinkat-account.ts  active-user.ts  budget-colors.ts  budget-pace.ts  chart-style.ts  constants.ts  date-constants.ts  date-format.ts  default-account.ts  format.ts  fx-fetch.ts  label-styles.ts  use-formatting.ts
src/types/: enums.ts  (+2 more)
(+70 files in other folders)
